# leekbot-2.0

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  start_container.sh
.github/workflows/: docker-image.yml
queries/: lcuser_calendar.graphql  lcuser_overallstats.graphql  lcuser_problems.graphql  lcuser_streak.graphql  lcuser_user.graphql
src/: lcapi.rs  lcbot.rs  lcdb.rs  lib.rs  main.rs  models.rs
src/lcapi/: client.rs
src/lcapi/queries/: lcuser_badges.graphql  lcuser_languagestats.graphql  lcuser_publicprofile.graphql  lcuser_recentac.ql
src/lcbot/: commands.rs
src/lcdb/: leekcoins.rs  problems.rs  recentcache.rs  schema.rs  submissions.rs  users.rs
src/queries/: lcuser.graphql  lcuser_conteststats.graphql  lcuser_globaldata.graphql
