[package]
name = "leekbot"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.30"
graphql_client = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
dotenv = "0.15"
anyhow = "1.0.93"
log = "0.4.22"
env_logger = "0.11.5"
regex = "1.11.1"
chrono = "0.4.39"
rand = "0.9.0"
