[package]
name = "leekbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.7"
graphql_client = "0.14.0"
itertools = "0.14.0"
log = "0.4.27"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
